# epubreader

./: CMakeLists.txt  LICENSE  epubcontainer.cpp  epubcontainer.h  epubdocument.cpp  epubdocument.h  epubparser.cpp  epubparser.h  epubreader.pro  main.cpp  qpm.json  widget.cpp  widget.h
